deployment/kubernetes-laravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: dad-group-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      priorityClassName: high-priority
      containers:
        - name: api
          image: registry-172.22.21.115.sslip.io/dad-group-5/api:v3.0.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"  # Reduzi de 256 para 64
              cpu: "50m"
            limits:
              memory: "256Mi" # Reduzi de 512 para 256
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: api  
  namespace: dad-group-5
spec:
  ports:
    - port: 8000        
      targetPort: 80
  selector:
    app: laravel-app
