deployment/kubernetes-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: dad-group-5
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      priorityClassName: high-priority
      containers:
        - name: mysql
          image: mysql:8.0
          #Teste para poupar memoria
          args:
            - "--default-authentication-plugin=mysql_native_password"
            - "--performance-schema=0"
            - "--innodb-buffer-pool-size=64M"
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "128Mi"   # Era 384Mi
              cpu: "100m"
            limits:
              memory: "256Mi"   # Era 1Gi (Muito alto!)
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: dad-group-5
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
