deployment/kubernetes-vue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  namespace: dad-group-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      priorityClassName: low-priority
      containers:
        - name: web
          image: registry-172.22.21.115.sslip.io/dad-group-5/web:v3.0.21
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: web   # MUDADO DE 'vue-app' PARA 'web' PARA BATER CERTO COM O INGRESS
  namespace: dad-group-5
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vue-app
