deployment/ingress-fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dad-group-5
spec:
  ingressClassName: traefik
  rules:
    - host: web-dad-group-5-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80

    - host: api-dad-group-5-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /storage
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000

    - host: ws-dad-group-5-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket-server
                port:
                  number: 3000
