deployment/kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dad-group-5
spec:
  ingressClassName: traefik
  rules:
    # --------------------
    # FRONTEND (VUE)
    # --------------------
    - host: web-dad-group-5-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80

    # --------------------
    # API (LARAVEL)
    # --------------------
    - host: api-dad-group-5-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-app
                port:
                  number: 80

    # --------------------
    # WEBSOCKETS
    # --------------------
    - host: ws-dad-group-5-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket-server
                port:
                  number: 3000
